--- a/web/app/themes/sleepmaker/static/package.json
+++ b/web/app/themes/sleepmaker/static/package.json
@@ -58,6 +58,7 @@
     "require-dir": "^1.2.0",
     "require-yaml": "0.0.1",
     "run-sequence": "^2.2.1",
+    "smoothscroll": "^0.4.0",
     "smoothscroll-polyfill": "^0.4.4",
     "sort-css-media-queries": "^1.4.3",
     "uglifyjs-webpack-plugin": "^2.1.3",
@@ -75,6 +76,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
+    "sticky-js": "^1.2.2",
     "swiper": "^5.2.1",
     "vinyl-ftp": "^0.6.1",
     "whatwg-fetch": "^3.0.0"
